templates/static/css/style.css
@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');

/* Body zone -----------------------------------------------------------------------------------------------------------------*/

body {
  font-family: 'Quicksand', sans-serif;
  background-color: rgb(72, 105, 72);
  background-image: url('../images/background.jpg');
  background-size: 100vh;
  background-position-x: center;
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

/* Navigation bar ------------------------------------------------------------------------------------------------------------*/

nav {
  max-width: 640px;
  max-height: 60px;
  display: flex;
  justify-content: space-between;
  gap: 12px;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(20px);
  border-radius: 28px;
  padding-right: 12px;
  border: 1px solid rgba(255, 255, 255, 0.2);
}

.nav-logo {
  height: 36px;
  width: 36px;
  padding: 12px;
  display: inline-block;
  color: brown;
}

.nav-container {
  display: inline-block;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
}

.nav-item {
  height: 3em;
  color: rgba(255, 255, 255, 0.7);;
  font-size: medium;
  font-weight: normal;
  text-decoration: none;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 6px;
}

.nav-item:hover {
  color: white;
}

